@@ -1,3 +1,15 @@
+2020-06-11  Jonathan Bedard  <jbedard@apple.com>
+
+        WebKit: Add UIKit SPI for watchOS and tvOS
+        https://bugs.webkit.org/show_bug.cgi?id=213077
+        <rdar://problem/64255131>
+
+        Reviewed by Tim Horton.
+
+        No new tests, behavior unchanged.
+
+        * Platform/spi/ios/UIKitSPI.h:
+
 2020-06-11  David Kilzer  <ddkilzer@apple.com>
 
         [IPC] Adopt enum class for DragSourceAction
